Fixed blurring on scale.

--- a/src/resources/less/main.less
+++ b/src/resources/less/main.less
@@ -1700,14 +1700,22 @@ header[role=banner] {
                 }
 
                 @media (min-width: @screen-md-min) {
-                    height: 300px;
+                    height: 310px;
                 }
+
+                @media (min-width: @screen-lg-min) {
+                    height: 390px;
+                }
+
                 &:first-of-type {
                     left: 3px;
                 }
                 &:last-of-type {
                     left: -3px;
                 }
+
+                -webkit-backface-visibility: hidden;
+                -webkit-transform: translateZ(0) scale(1.0, 1.0);
 
                 transition:                    all 500ms ease;
                     -moz-transition:           all 500ms ease;
